# autoencodix_package

./: .gitignore  404.html  DEVELOPER.md  LLM_Setup.md  README.md  gen_api_index.py  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml  docs.yml
.ipynb_checkpoints/: pyproject-checkpoint.toml
Tutorials/: 16-MJ-Pofile-XModalix.py  DevGuide.ipynb
Tutorials/DeepDives/: ConfigTutorial.ipynb  EvaluateTutorial.ipynb  InputDataTutorials.ipynb  MemoryEfficientSaving.ipynb  PipelineOutputTutorial.ipynb  VisualizeTutorial.ipynb  default_config.yaml
Tutorials/PipelineTutorials/: Disentanglix.ipynb  Imagix.ipynb  Maskix.ipynb  Ontix.ipynb  Stackix.ipynb  Vanillix.ipynb  Varix.ipynb  XModalix.ipynb  van.pkl_preprocessor.pkl
Tutorials/PipelineTutorials/tutorial_res/: stackix.pkl_model.pth  stackix.pkl_preprocessor.pkl  van.pkl_model.pth  van.pkl_preprocessor.pkl  varix.pkl_model.pth  varix.pkl_preprocessor.pkl
api/base/: index.html
api/configs/: index.html
api/data/: index.html
api/disentanglix/: index.html
api/evaluate/: index.html
api/imagix/: index.html
api/modeling/: index.html
api/ontix/: index.html
api/stackix/: index.html
api/trainers/: index.html
api/utils/: index.html
api/vanillix/: index.html
api/varix/: index.html
api/visualize/: index.html
autoencodix/: LICENSE.txt  __init__.py  pyproject.toml
autoencodix/src/: __init__.py  vanillix.py
autoencodix/src/autoencodix/: __about__.py
autoencodix/src/base/: _base_autoencoder.py  _base_dataset.py  _base_pipeline.py
autoencodix/src/core/: __init__.py  _base_autoencoder.py  _base_dataset.py  _base_pipeline.py  _default_config.py  _layer_factory.py  _model_interface.py  _result.py  _vanillix.py  _vanillix_architecture.py
autoencodix/src/data/: __init__.py  _datasetcontainer.py  _datasplitter.py  _numeric_dataset.py
autoencodix/src/evaluate/: evaluate.py
autoencodix/src/modeling/: __init__.py  _vanillix_architecture.py
autoencodix/src/models/: __init__.py  _vanillix.py  _vanillix_model.py  vanillix.py
autoencodix/src/notebooks/: 0.0-mj-sandbox.ipynb
autoencodix/src/preprocessing/: __init__.py  _preprocessor.py  preprocessor.py
autoencodix/src/trainers/: __init__.py  _trainer.py  predictor.py  trainer.py
autoencodix/src/utils/: __init__.py  _result.py  default_config.py
autoencodix/src/visualize/: visualize.py
autoencodix/tests/: __init__.py
configs/: .coverage  bulk_bulk_tran_config.yaml  bulk_img_config.yaml  bulk_img_up.yaml  full_config.yaml  largebulk.yaml  largesc.yaml  multi_bulk.yaml  multi_sc_config.yaml  sc_img_tran_config.yaml  sc_sc_tran_config.yaml
configs/invalid/: invalid_modalities_config.yaml  invalid_one_config.yaml  invalid_sc_bulk_config.yaml  invalid_three_config.yaml
docs/: conf.py  index.md  tutorials.md
docs/api/: base.md  configs.md  data.md  disentanglix.md  evaluate.md  imagix.md  modeling.md  ontix.md  stackix.md  trainers.md  utils.md  vanillix.md  varix.md  visualize.md
large_ontix_code/: 00_llm_ontologies.py  01_get_census_data.py  02_census_preparation.py  03_large_ontix_tuning.py  04_large_ontix_finaltraining.py  05_pred_vis_eval.py  run_all.sh
notebooks/: 0.0-mj-sandbox.ipynb  0.1-mj-sandbox.ipynb  0.4-je-visualize.ipynb  0.5-je-ontix.ipynb  0.7-je-ml-task.ipynb  01-2-mj-xmodalix.ipynb  01-JE-Xmodalix-eval.ipynb  01-MJ-xmodalix.ipynb  02-MJ-miracle.ipynb  03-MJ-xmodalix-predict.ipynb  10-MJ-XModalix-Consistency.ipynb  14-MJ-maskix-dataprep.ipynb  16-MJ-Pofile-XModalix.ipynb  XAI_06_vannilix_varix.ipynb  alicia-autoencoder.ipynb  alicia-autoencoder_blobs.ipynb  combine_and_split_census.py  get_census_chunks.py  large-ontix-preprocessing.py  large-ontix-tune.ipynb  large-ontix-tune.py  run_census.sh
notebooks/ConsistencyChecks/: 10-MJ-XModalix-Consistency.ipynb  12-MJ-consistency-sc.ipynb  13-MJ-consistency-basic.ipynb
notebooks/TestingNotebooks/: TestStackix.ipynb
notebooks/census_chunks/: human_meta_counts_healthy-diseased.pkl
notebooks/data/: gene_ex_linear.parquet  gene_ex_linear_annotations.parquet  gene_expression_linear.csv  gene_expression_nonlinear.csv  gene_expression_sparse.csv
notebooks/output_alicia/linear/: latent_epoch_0.csv  latent_epoch_1.csv  latent_epoch_10.csv  latent_epoch_11.csv  latent_epoch_12.csv  latent_epoch_13.csv  latent_epoch_14.csv  latent_epoch_15.csv  latent_epoch_16.csv  latent_epoch_17.csv  latent_epoch_18.csv  latent_epoch_2.csv  (+188 more)
search/: search_index.json
src/: README.md
src/autoencodix/: __init__.py  disentanglix.py  imagix.py  maskix.py  ontix.py  stackix.py  vanillix.py  varix.py  xmodalix.py
tests/: test_vanillix.py  test_varix.py
tests/test_base/: test_base_autoencoder.py  test_base_dataset.py  test_base_pipeline.py  test_base_trainer.py
tests/test_data/: test_datapackage_splitter.py  test_datasetcontainer.py  test_datasplitter.py  test_filter.py  test_imgdataclass.py  test_numericdataset.py
tests/test_losses/: test_maskix_loss.py
tests/test_modeling/: test_layer_factory.py  test_varix_architecture.py
tests/test_modelling/: test_layer_factory.py  test_vanillix_architecture.py  test_varix_architecture.py
tests/test_trainers/: test_general_trainer.py  test_vanillix_trainer.py
tests/test_utils/: test_base_loss.py  test_default_config.py  test_modeloutput.py  test_result.py  test_traindynamics.py  test_utils.py  test_vanillix_loss.py  test_varix_loss.py
tutorials/: index.html
(+501 files in other folders)
