[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "autoencodix"
version = "0.1.0"
description = "A flexible autoencoder toolkit"
requires-python = ">=3.9,<3.12"

dependencies = [
    # Machine Learning and Numerical Computing
    "numpy~=1.23.5",
    "scipy~=1.14.0",
    "scikit-learn~=1.3.0",
    "scikit-learn-extra~=0.3.0",
    
    # Deep Learning
    "torch~=2.3.1",
    "torchvision~=0.18.1",
    "torcheval~=0.0.7",
    
    # Data Handling
    "pandas~=2.2.2",
    "anndata~=0.10.8",
    "pyarrow~=16.1.0",
    
    # Visualization
    "matplotlib~=3.7.1",
    "seaborn~=0.13.2",
    "plotly~=5.22.0",
    
    # Additional Libraries
    "networkx~=3.3",
    "numba~=0.57.0",
    "umap-learn~=0.5.6",
    "pillow~=10.4.0",
    "pyyaml~=6.0.1",
    "opencv-python~=4.10.0.84",
    "kaleido~=0.2.1",
    
    # Optimization and Experiment Tracking
    "optuna~=3.6.1",
    "tensorboard~=2.17.0",
    
    # Optional Dependencies
    "scikit-plot~=0.3.7"
]

# Development Dependencies
[tool.hatch.envs.test]
dependencies = [
    "pytest",
    "pytest-cov",
    "coverage[toml]",
    "mypy",
    "ruff",
    "black"
]
[tool.hatch.build.targets.sdist]
include = ["src/notebooks/**/*"]

[tool.hatch.build.targets.wheel]
include = ["src/notebooks/**/*"]
