[project]
name = "autoencodix"
version = "0.1.0"
description = "A flexible autoencoder toolkit."
requires-python = ">=3.9,<3.13"
dependencies = [
    "anndata>=0.10.9",
    "lightning-fabric>=2.5.0.post0",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas-stubs>=2.2.2.240807",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "torch>=2.1.0,<2.4.0",
    "seaborn>=0.13.2",
    "llvmlite>=0.43.0",
    "numba>=0.60.0",
    "umap-learn>=0.5.7",
    "pyarrow>=19.0.1",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "flake8>=7.1.1",
    "ipykernel>=6.29.5",
    "mypy>=1.14.1",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "ruff>=0.9.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
