[project]
name = "autoencodix"
version = "0.1.0"
description = "A flexible autoencoder toolkit."
requires-python = ">=3.9,<3.13"
dependencies = [
    "lightning-fabric>=2.5.0.post0",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas-stubs>=2.2.2.240807",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "torch>=2.1.0,<2.4.0",
    "anndata==0.10.8",
    "mudata==0.2.4",
    "scanpy>=1.10.3",
    "opencv-python>=4.11.0.86",
    "seaborn>=0.13.2",
    "llvmlite>=0.43.0",
    "numba>=0.60.0",
    "umap-learn>=0.5.7",
    "pyarrow>=19.0.1",
    "ipykernel>=6.29.5",
    "dill>=0.4.0",
    "tensorboard>=2.19.0",
    "tensorboard-plugin-profile>=2.20.1",
    "captum==0.7.0",
    "gseapy==1.1.9",
    "mkdocstrings[python]>=0.30.0",
    "mkdocs-material>=9.6.19",
    "ipywidgets>=8.1.7",
    "mistralai>=1.9.11",
    "ollama>=0.6.1",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "flake8>=7.1.1",
    "ipykernel>=6.29.5",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "ruff>=0.9.3",
    "tabpfn==2.1.3",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.19",
    "mkdocstrings>=0.30.0",
    "ty>=0.0.1a20",
    # "cellxgene-census>=1.17.0",
    # "syne-tune>=0.14.2",
    "pympler>=1.1",
    "mkdocs-gen-files>=0.6.0",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-section-index>=0.3.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ty.rules]
[tool.ty.src]
exclude = ["src/autoencodix/utils/feature_importance.py", "**/.ipynb_checkpoints/**",]
